# sj4

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  config.h.in  format.sh  watcom.sh  win32.sh  wnn2sj4.py
dict/: visual.plus.dic  visual.utf8.dic
doc/doc/: Makefile  hinsi.html  makedict.html  makedict.ms
doc/man/: sj4mkdic.1
include/sj3common/: Const.h  sj3cmd.h  sj3err.h  sj_const.h  sj_euc.h  sj_hinsi.h  sj_string.h
include/sj3core/: Dict.h  Struct.h  sj3lowlib.h  sj_global.h  sj_kanakan.h  sj_kcnv.h  sj_left.h  sj_prty.h  sj_rename.h  sj_struct.h  sj_typedef.h  sj_var.h
include/sj3rkcv/: kana.h  kctype.h  rk.h  sj3rkcv.h  wchar16.h
include/sj4charset/: sj4charset.h  sj_charset.h  sj_euc2ucs.h  sj_ucs2euc.h
include/sj4common/: Const.h  sj4cmd.h  sj4compat.h  sj4err.h  sj_const.h  sj_euc.h  sj_euc2ucs.h  sj_hinsi.h  sj_string.h  sj_types.h  sj_ucs2euc.h
include/sj4core/: Dict.h  Struct.h  sj4lowlib.h  sj_compat.h  sj_connect.h  sj_const.h  sj_dict.h  sj_global.h  sj_kanakan.h  sj_kcnv.h  sj_left.h  sj_prty.h  sj_rename.h  sj_right.h  sj_struct.h  sj_study.h  sj_suuji.h  sj_table.h  sj_typedef.h  sj_var.h  sj_yomi.h
include/sj4ime/: sj4ime.h  sj_ime.h
include/sj4lib/: sj4lib.h
include/sj4rkcv/: kana.h  kctype.h  key.h  rk.h  sj4rkcv.h  wchar16.h
lib/sj3core/: adddic.c  addelcmn.c  alloc.c  charsize.c  chrtbl.c  cl2knj.c  clstudy.c  cmpstr.c  connect.c  cvtclknj.c  cvtdict.c  cvtkanji.c  deldic.c  dict.c  functbl.c  fuzoku.c  fzkyomi.c  getkanji.c  getrank.c  global.c  init.c  memory.c  mk2claus.c  mkbunset.c  mkjiritu.c  mkkouho.c  mknumber.c  mvmemd.c  peepdic.c  ph2knj.c  ph_khtbl.c  priority.c  prtytbl.c  sdepend.c  selclrec.c  setconj.c  setjrec.c  setkouho.c  setubi.c  srchdict.c  (+9 more)
lib/sj3rkcv/: rk_conv.c  sj3_rkcv.c  wc16_str.c
lib/sj4charset/: conv.c  euc2ucs.c  ucs2euc.c
lib/sj4common/: bsd-snprintf.c  ftruncate.c  sj_string.c  strlcpy.c  unlink.c
lib/sj4core/: adddic.c  addelcmn.c  alloc.c  charsize.c  chrtbl.c  cl2knj.c  clstudy.c  cmpstr.c  conjunc.c  connect.c  cvtclknj.c  cvtdict.c  cvtkanji.c  deldic.c  dict.c  functbl.c  fuzoku.c  fzkyomi.c  getcost.c  getkanji.c  getrank.c  global.c  hzstrlen.c  init.c  istrcmp.c  maindic.c  maindic2.c  memory.c  mk2claus.c  mkbunset.c  mkjiritu.c  mkkouho.c  mknumber.c  mvmemd.c  mvmemi.c  peepdic.c  ph2knj.c  ph_khtbl.c  priority.c  prtytbl.c  (+25 more)
lib/sj4ime/: KanaTable  ime.c
lib/sj4lib/: sj.c
lib/sj4rkcv/: rk_conv.c  sj4_rkcv.c  wc16_str.c
src/sj3mkdic/: GramTable  GramTable.utf8  char.c  cnvhinsi.c  file.c  global.c  hindo.c  knjcvt.c  makedict.c  makelist.c  makeseg.c  memory.c  offset.c  readline.c  sj3_dict_const.h  sj3_dict_struct.h  sj3mkdic.h  string.c
src/sj3test/: main.c
src/sj4mkdic/: char.c  cnvhinsi.c  file.c  global.c  hindo.c  knjcvt.c  makedict.c  makelist.c  makeseg.c  memory.c  offset.c  readline.c  sj4_dict_const.h  sj4_dict_struct.h  sj4mkdic.h  string.c  ucstable.h
src/sj4test/: main.c
src/sj4test2/: main.c
tools/: format.sh  win32.sh  wnn2sj4.py
